# mandelbrot

./: .gitignore  CMakeLists.txt  CMakeLists.txt~
include/: core.hpp  core.hpp~
src/: core.cpp  core.cpp~  main.cpp
test/: test.cpp  test.cpp~
